# lavender

./: .gitignore  23  Makefile  Makefile.build  Makefile.include  README.md  STRAT  STRAT_2  aider_specs_and_tests.sh  callgrind.out.4575  compile_commands.part  opencode.json  test_analysis_camera.h.spec.analysis  test_analysis_chunk_generator_table.h.analysis  test_analysis_game_directory.analysis  test_analysis_input.h.analysis  test_analysis_inventory_inventory.h.analysis  test_analysis_inventory_inventory_manager.analysis  test_analysis_ipv4_address.analysis  test_analysis_process_manager.analysis  test_analysis_process_priority_table_entry.analysis  test_analysis_process_process_table.analysis  test_analysis_region_manager.analysis  test_analysis_sprite.h.spec.analysis  test_analysis_ui_element.analysis  test_analysis_ui_slider.analysis  test_analysis_ui_text_box.analysis  tmp  webcrawler_opencode.json
tools/: _ui_sample.xml  editor_ui.py  gen-scene.py  gen_aliased_texture.py  gen_entity.py  gen_game_action.py  gen_sprite.py  gen_tile.py  gen_tile_layer.py  gen_ui.py  gen_ui_code.py  gen_ui_tile_kind.py  grit_file_batcher.py  lav_build  lav_build_client_and_server  lav_grit  lav_new_game_action  lav_new_project  lav_query_tools.py  lav_ui_builder  lav_update_ui  mod_png.py  new_ui_builder.py  perf_summary.sh  png_gen.py  pyproject.toml  requirements.txt  tool_ui_viewer.py  ui_builder.py
tools/editor_ui_modules/: constants.py  file_browser.py  history.py  message_hud.py  properties_hud.py  span_renderer.py  tool_hud.py  ui_element_defs.py  ui_hierarchy.py  (+2 more)
(+1630 files in other folders)
