[project]
name = "lavender-tools"
version = "0.1.0"
description = "Code-generation and project tooling for the Lavender game engine."
requires-python = ">=3.9"
license = {text = "MIT"}
dependencies = [
    "mcp[cli]",
    "Pillow",
]

[project.optional-dependencies]
lsp = ["pygls>=2.1.1"]
dev = ["pytest"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["lavender_tools*"]
